--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -23,13 +23,26 @@
               <p>Click the button below to get your auth url.</p>
               <button id="getCode">Get OAuth URL</button>
               <p id="result"></p>
-              <a id="authURL" href target="_blank">CLick to authorise</a>
+              <a id="authURL" href target="_blank">Click to authorise</a>
+
+              <h4>Step 2: Get your code and exchange for an access token</h4>
+              <p>
+                After you’re redirected back to your Meet app on GitHub, copy the code
+                from the URI.
+              </p>
+              <br />
+              <label
+                >Code input
+                <input id="code" type="text" value="" />
+              </label>
+              <button id="getToken">Get Token</button>
+              <p id="accessToken"></p>
         </main>
         <script type="text/javascript">
             const getCodeElement = document.getElementById("getCode");
             const resultElement = document.getElementById("result");
             const resultLink = document.getElementById("authURL");
-            const getAuthURL = ;
+            const getAuthURL = "https://i82qtzjm02.execute-api.eu-central-1.amazonaws.com/dev/api/get-auth-url";
 
             getCodeElement.onclick = function () {
                 fetch(getAuthURL)
@@ -38,11 +51,36 @@
                     })
                     .then(function (json) {
                         const result = JSON.stringify(json);
-                        const { authURL } = JSON.parse(result);
+                        const { authUrl } = JSON.parse(result);
                         resultElement.innerText = result;
                         resultLink.href = authUrl;
                     });
             };
+
+            // --------------------- STEP 2
+      const codeValue = document.getElementById("code");
+      const getAccessToken = document.getElementById("getToken");
+      const accessTokenElement = document.getElementById("accessToken");
+      const getToken =
+        "https://i82qtzjm02.execute-api.eu-central-1.amazonaws.com/dev/api/token/{code}";
+
+      getAccessToken.onclick = function () {
+        let code = codeValue.value;
+
+        // if the authorization code is not URL-encoded, then URL-encode it.
+        if (decodeURIComponent(code) === code) {
+          code = encodeURIComponent(codeValue.value);
+        }
+        const getTokenRequest = getToken +  "/" + code;
+        fetch(getTokenRequest)
+          .then(function (response) {
+            return response.json();
+          })
+          .then(function (json) {
+            accessTokenElement.innerText = JSON.stringify(json);
+          });
+      };
+      // --------------------- END OF STEP 2
         </script>
     </body>
 </html>
